Fix for WFCORE-5835, Missing modular export when enabling dns.ping protocol Conflicts: 	host-controller/src/test/java/org/jboss/as/host/controller/ManagedServerBootCmdFactoryTestCase.java 	launcher/src/test/java/org/wildfly/core/launcher/CommandBuilderTest.java